--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+Footer{
+  background: red;
+  font-size: 2rem;
+  color: rgb(128, 159, 225);
+  display: flex;
+  justify-content: center;
+}
